# Nuchiie

./: Cargo.toml  LICENSE  README.md  起司原典.c
output/: ArabicToChinese.cpp  ArabicToChinese.kt  NumberToChinese.cpp  NumberToChinese.hs  NumberToChinese.kt  NumberToChinese.swift  arabic_to_chinese.R  arabic_to_chinese.c  arabic_to_chinese.go  arabic_to_chinese.rb  arabic_to_chinese.rs  arabic_to_chinese.sh  arabic_to_chinese.zig  number_to_chinese.R  number_to_chinese.c  number_to_chinese.go  number_to_chinese.rb  number_to_chinese.rs  number_to_chinese.sh  number_to_chinese.zig
src/: lib.rs  main.rs
tests/: lib.rs
