[package]
name = "nuchiie"
version = "0.1.0"
edition = "2021"

[lib]
name = "nuchiie"
path = "src/lib.rs"

[[test]]
name = "nuchiie-test"
path = "tests/lib.rs"


[[bin]]
name = "nuchiie-python"
path = "src/bin/python.rs"

[[bin]]
name = "nuchiie-rust"
path = "src/bin/rust.rs"

[[bin]]
name = "nuchiie-javascript"
path = "src/bin/javascript.rs"

[[bin]]
name = "nuchiie-lua"
path = "src/bin/lua.rs"

[[bin]]
name = "nuchiie-sql"
path = "src/bin/sql.rs"

[[bin]]
name = "nuchiie-c"
path = "src/bin/c.rs"

[[bin]]
name = "nuchiie-cpp"
path = "src/bin/cpp.rs"

[[bin]]
name = "nuchiie-kotlin"
path = "src/bin/kotlin.rs"


[dependencies]
