[package]
name = "nuchiie"
version = "0.1.0"
edition = "2021"

[lib]
name = "nuchiie"
path = "src/lib.rs"

[[test]]
name = "nuchiie-test"
path = "tests/lib.rs"


[[bin]]
name = "nuchiie-python"
path = "src/bin/python.rs"

[[bin]]
name = "nuchiie-rust"
path = "src/bin/rust.rs"

[[bin]]
name = "nuchiie-javascript"
path = "src/bin/javascript.rs"

[[bin]]
name = "nuchiie-lua"
path = "src/bin/lua.rs"

[[bin]]
name = "nuchiie-sql"
path = "src/bin/sql.rs"

[[bin]]
name = "nuchiie-c"
path = "src/bin/c.rs"

[[bin]]
name = "nuchiie-cpp"
path = "src/bin/cpp.rs"

[[bin]]
name = "nuchiie-kotlin"
path = "src/bin/kotlin.rs"

[[bin]]
name = "nuchiie-go"
path = "src/bin/go.rs"


[[bin]]
name = "nuchiie-ruby"
path = "src/bin/ruby.rs"


[[bin]]
name = "nuchiie-r"
path = "src/bin/r.rs"

[[bin]]
name = "nuchiie-bash"
path = "src/bin/bash.rs"

[[bin]]
name = "nuchiie-php"
path = "src/bin/php.rs"


[[bin]]
name = "nuchiie-zig"
path = "src/bin/zig.rs"


[[bin]]
name = "nuchiie-文言"
path = "src/bin/文言.rs"

[[bin]]
name = "nuchiie-java"
path = "src/bin/java.rs"

[dependencies]
